[package]
name = "quictransport-quinn"
description = "QuicTransport bindings for Quinn"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/webtransport-rs"
license = "MIT"

version = "0.8.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webtransport-generic = { path = "../webtransport-generic", version = "0.8" }

quinn = "0.10"

# This is just for AsyncRead/AsyncWrite and does NOT pull in anything else
tokio = { version = "1", default-features = false }

bytes = "1"
thiserror = "1"
url = "2"
