[package]
name = "web-transport-axum"
description = "WebTransport compatibility layer for Axum WebSockets"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-transport-rs"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

[dependencies]
bytes = "1"
axum = { version = "0.8", features = ["ws"] }
thiserror = "2"
futures = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros"] }

web-transport-generic = { path = "../web-transport-generic", version = "0.1" }
web-transport-proto = { path = "../web-transport-proto", version = "0.2" }
