[package]
name = "web-transport-quinn"
description = "WebTransport library for Quinn"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-transport-rs"
license = "MIT OR Apache-2.0"

version = "0.4.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-transport-proto = { path = "../web-transport-proto", version = "0.2" }

quinn = "0.11"
quinn-proto = "0.11"

bytes = "1"
http = "1"
thiserror = "2"
futures = "0.3"
url = "2"
log = "0.4"

rustls-platform-verifier = "0.4"
rustls = "0.23"
aws-lc-rs = "1"

# This is just for AsyncRead/AsyncWrite and does NOT pull in anything else
tokio = { version = "1", default-features = false }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
rustls-pemfile = "2"
rustls = "0.23"
quinn = "0.11"
quinn-proto = "0.11"
