[package]
name = "web-transport-quinn"
description = "WebTransport library for Quinn"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-transport"
license = "MIT OR Apache-2.0"

version = "0.8.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["dep:aws-lc-rs", "quinn/rustls-aws-lc-rs", "rustls/aws-lc-rs"]
ring = ["dep:ring", "quinn/rustls-ring", "rustls/ring"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-lc-rs = { version = "1", optional = true }

bytes = "1"
futures = "0.3"
http = "1"
log = "0.4"

quinn = { version = "0.11", default-features = false, features = [
    "platform-verifier",
    "runtime-tokio",
    "bloom",
] }
ring = { version = "0.17.13", optional = true }

rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
] }
rustls-native-certs = "0.8"
thiserror = "2"

tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
] }
url = "2"
web-transport-proto = { path = "../web-transport-proto", version = "0.2" }
web-transport-trait = { path = "../web-transport-trait", version = "0.1" }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
