[package]
name = "web-transport-wasm"
description = "WebTransport WASM bindings"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-transport-rs"
license = "MIT OR Apache-2.0"

version = "0.5.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[dependencies]
bytes = "1"
js-sys = "0.3.76"
thiserror = "2"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-streams = "0.1.2"

[dependencies.web-sys]
version = "0.3.76"
features = [
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WebTransportDatagramDuplexStream",
    "WebTransportCongestionControl",
    "WebTransportError",
    "WebTransportErrorSource",
    "WebTransportErrorOptions",
    "WritableStream",
    "WritableStreamDefaultWriter",
]
