[package]
name = "web-transport"
description = "Generic WebTransport client and server"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-transport-rs"
license = "MIT OR Apache-2.0"

version = "0.5.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-transport-wasm = { version = "0.3", path = "../web-transport-wasm" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-transport-quinn = { version = "0.3", path = "../web-transport-quinn" }
thiserror = "1"
