[package]
name = "webtransport-baton"
description = "Implements devious-baton, used to test WebTransport implementations"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/webtransport-rs"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webtransport-generic = { path = "../webtransport-generic", version = "0.5" }

bytes = "1"
anyhow = "1"
rand = "0.8"
tokio = { version = "1.27", features = ["full"] }
log = "0.4"
http = "0.2"
