[package]
name = "webtransport-generic"
description = "Generic trait to implement a webtransport API"
authors = ["Luke Curley", "François Michel"]
repository = "https://github.com/kixelated/webtransport-rs"
license = "MIT OR Apache-2.0"

version = "0.5.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = "1" # only includes AsyncRead and AsyncWrite; no features
