[package]
name = "webtransport-quinn"
description = "WebTransport library for Quinn"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/webtransport-rs"
license = "MIT"

version = "0.2.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10"
bytes = "1"
quinn-proto = "0.10"
http = "0.2"
thiserror = "1"
futures = "0.3"
async-std = "1.11"
webtransport-proto = { path = "../webtransport-proto" }
webtransport-generic = { path = "../webtransport-generic" }
tokio-util = "0.7"

[dev-dependencies]
rcgen = "0.11"
anyhow = "1"
log = "0.4"
rand = "0.8"
tokio = { version = "1.27", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
env_logger = "0.10"
