[package]
name = "webtransport-quinn"
description = "WebTransport library for Quinn"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/webtransport-rs"
license = "MIT"

version = "0.5.4"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webtransport-proto = { path = "../webtransport-proto", version = "0.5.4" }
webtransport-generic = { path = "../webtransport-generic", version = "0.5" }

quinn = "0.10"
bytes = "1"
quinn-proto = "0.10"
http = "0.2"
thiserror = "1"
futures = "0.3"
async-std = "1.11"

# This is just for AsyncRead/AsyncWrite and does NOT pull in anything else
tokio = "1.29"

[dev-dependencies]
webtransport-baton = { path = "../webtransport-baton", version = "0.1" }
rcgen = "0.11"
anyhow = "1"
tokio = { version = "1.27", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
