[package]
name = "webtransport-wasm"
description = "WebTransport WASM bindings"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/webtransport-rs"
license = "MIT"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

[dependencies]
webtransport-generic = { path = "../webtransport-generic", version = "0.9" }

async-trait = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.69"
thiserror = "1"
bytes = "1"
pin-project = "1"
tokio = { version = "1", default-features = false }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WebTransport",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WebTransportDatagramDuplexStream",
    "WritableStream",
    "WritableStreamDefaultWriter",
]
